[tool.poetry]
name = "tf"
version = "0.1.0"
description = "TensorFlow examples"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ipykernel = "^6.16.0"
tensorflow-datasets = "^4.7.0"
matplotlib = "^3.6.1"
cuda-python = "^11.8.0"
tensorflow = "^2.10.0"
tensorflow-text = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
